--- a/package.json
+++ b/package.json
@@ -11,34 +11,14 @@
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-alignment": "^47.3.0",
-    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
-    "@ckeditor/ckeditor5-font": "^47.3.0",
-    "@ckeditor/ckeditor5-heading": "^47.3.0",
-    "@ckeditor/ckeditor5-highlight": "^47.3.0",
-    "@ckeditor/ckeditor5-image": "^47.3.0",
-    "@ckeditor/ckeditor5-react": "^11.0.1",
-    "@ckeditor/ckeditor5-table": "^47.3.0",
     "@formspree/react": "^3.0.0",
     "@reduxjs/toolkit": "^2.11.2",
-    "@supabase/supabase-js": "^2.89.0",
+    "@supabase/supabase-js": "^2.57.4",
     "@tailwindcss/typography": "^0.5.19",
-    "@tinymce/tinymce-react": "^6.3.0",
-    "@tiptap/extension-color": "^3.14.0",
-    "@tiptap/extension-font-family": "^3.14.0",
-    "@tiptap/extension-highlight": "^3.14.0",
-    "@tiptap/extension-link": "^3.14.0",
-    "@tiptap/extension-table": "^3.14.0",
-    "@tiptap/extension-table-cell": "^3.14.0",
-    "@tiptap/extension-table-header": "^3.14.0",
-    "@tiptap/extension-table-row": "^3.14.0",
-    "@tiptap/extension-text-style": "^3.14.0",
-    "@tiptap/extension-underline": "^3.14.0",
-    "@tiptap/extension-youtube": "^3.14.0",
     "framer-motion": "^12.23.26",
     "html-react-parser": "^5.2.11",
+    "jodit-react": "^5.2.38",
     "lucide-react": "^0.344.0",
-    "nodemailer": "^7.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.69.0",
